log
Mon 08 Apr 2024 05:53:10 PM UTC: 
 hashmap.c | 51 ++++++++++++++++++---------------------------------
 1 file changed, 18 insertions(+), 33 deletions(-)
 tests:  0|0
08760f4
Mon 08 Apr 2024 05:57:36 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5a7f387
Mon 08 Apr 2024 05:57:57 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6e6a96a
Mon 08 Apr 2024 05:58:04 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
84afbc8
Mon 08 Apr 2024 06:10:10 PM UTC: 
 hashmap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:40: error: expected ‘)’ before ‘;’ token
   46 |   Pair* nuevoPair = malloc(sizeof(Pair);
      |                           ~            ^
      |                                        )
hashmap.c:61:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   61 | }
      | ^
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
In file included from test.c:4:
hashmap.c:46:9: error: unused variable ‘nuevoPair’ [-Werror=unused-variable]
   46 |   Pair* nuevoPair = malloc(sizeof(Pair);
      |         ^~~~~~~~~
hashmap.c:44:7: error: unused variable ‘casilla’ [-Werror=unused-variable]
   44 |   int casilla = hash(key, map->capacity);
      |       ^~~~~~~
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f6ec0b4
Mon 08 Apr 2024 06:10:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ce33bd8
Mon 08 Apr 2024 06:11:29 PM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
159be34
Tue 09 Apr 2024 02:00:23 AM UTC: 
 hashmap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|0
21fd4bb
Tue 09 Apr 2024 02:02:08 AM UTC: 
 hashmap.c | 14 --------------
 1 file changed, 14 deletions(-)
 tests:  0|0
38c4a52
Tue 09 Apr 2024 02:02:55 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
d180805
Tue 09 Apr 2024 02:05:29 AM UTC: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:8: error: unused variable ‘casilla’ [-Werror=unused-variable]
   43 |   long casilla = hash(key, map->capacity);
      |        ^~~~~~~
hashmap.c:46:5: error: ‘*nuevoPair.key’ is used uninitialized [-Werror=uninitialized]
   46 |     strcpy(nuevoPair->key, key);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
74f5c6a
Tue 09 Apr 2024 02:05:57 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:5: error: ‘*nuevoPair.key’ is used uninitialized [-Werror=uninitialized]
   46 |     strcpy(nuevoPair->key, key);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1dd76de
Tue 09 Apr 2024 02:07:03 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
e1c6b8e
Tue 09 Apr 2024 02:07:10 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:5: error: ‘*nuevoPair.key’ is used uninitialized [-Werror=uninitialized]
   46 |     strcpy(nuevoPair->key, key);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
152e5ff
Tue 09 Apr 2024 02:08:22 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2388b71
Tue 09 Apr 2024 02:10:58 AM UTC: 
 hashmap.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
627b296
